[tool.poetry]
name = "illdomybest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.2"
uvicorn = "^0.12.2"
sqlalchemy = "^1.3.20"
taskipy = "^1.4.0"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
assertpy = "^1.1"
litecli = "^1.4.1"

[tool.taskipy.tasks]
test = "python -m unittest tests/test_*.py"
lint = "pylint tests taskipy"
uvicorn = "uvicorn app:app --reload --debug --host 0.0.0.0 --port 5000"
build = "responder build"
initfixture = "python initfixture.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
